# dmx2c2ip

./: .gitmodules  AUTHORS  README  build_deb.sh  configure.ac
debian/: changelog  control  copyright  dmx2c2ip.default  dmx2c2ip.init  rules
debian/docs/: dmx2c2ip.1
doc/: C2IP_protocol.txt  function_names.txt
src/: Makefile.am  buffered_dmx_recv.c  buffered_dmx_recv.h  buffered_dmx_recv_private.h  build_icon.sh  c2ip.h  c2ip_connection.c  c2ip_connection.h  c2ip_connection_manager.c  c2ip_connection_manager.h  c2ip_connection_manager_marshal.list  c2ip_connection_values.c  c2ip_connection_values.h  c2ip_connection_values_marshal.list  c2ip_decode.c  c2ip_decode.h  c2ip_device.c  c2ip_device.h  c2ip_function.c  c2ip_function.h  c2ip_scan.c  c2ip_scan.h  c2ip_scan_marshal.list  c2ip_strings.c  c2ip_strings.h  c2ip_tool.c  c2ip_value.c  c2ip_value.h  dmx2c2ip.conf.in  dmx_c2ip_mapper.c  dmx_c2ip_mapper.h  dmx_c2ip_mapper_marshal.list  dmx_recv.c  dmx_recv.h  dmx_send.c  dmx_serial.c  dmx_serial.h  httpd.c  httpd.h  main.c  (+6 more)
src/http_root/: C2IP.js  Makefile.am  device_info.js  device_info.xhtml  dmx_map.xhtml  dump_values.xhtml  index.xhtml  jquery_min.js  json_test.xhtml  json_util.js  menu.js  menu.xhtml  value_tree.xhtml
