AC_INIT([dmx2c2ip], [0.1])
AC_CONFIG_SRCDIR([src/main.c])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AC_SYS_LARGEFILE
AM_PATH_GLIB_2_0(2.30.0,,, [gobject])
# Check for microhttpd
MICROHTTPD_CFLAGS=""
AC_CHECK_HEADERS([microhttpd.h],[MICROHTTPD_CFLAGS=""])
MICROHTTPD_LIBS=""
AC_CHECK_LIB([microhttpd],[MHD_start_daemon],[MICROHTTPD_LIBS="-lmicrohttpd"])
AC_SUBST(MICROHTTPD_CFLAGS)
AC_SUBST(MICROHTTPD_LIBS,$MICROHTTPD_LIBS)
AC_CONFIG_FILES([Makefile src/Makefile ])
AC_OUTPUT
